tests/src/frontend/syntax/invalid/const_pattern1.sk
const My_bool: Bool = true;

fun shouldFail(x: Bool): String {
  x match {
  | My_bool -> "True"
  | false -> "False"
  | _ -> "Wut"
  }
}
